# gpt-oracle-tuktuk

./: Anchor.toml  Cargo.toml  rust-toolchain.toml
programs/gpt_oracle_tuktuk/: Cargo.toml
programs/gpt_oracle_tuktuk/src/: constants.rs  lib.rs
programs/gpt_oracle_tuktuk/src/instructions/: callback.rs  init.rs  initialize.rs  interact.rs  mod.rs  schedule.rs
programs/gpt_oracle_tuktuk/src/state/: agent.rs  mod.rs
tests/: gpt_oracle_tuktuk.ts
