[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Pin constant_time_eq to 0.3.x - 0.4.2 requires edition2024 (Rust 1.85+)
[patch.crates-io]
constant_time_eq = { version = "0.3.1" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
